# albertforfuture.de

./: .gitignore  .gitmodules  404.html  CONTRIBUTING.md  PUBLISH.md  README.md  TODO  albertforfuture.de  build.sh  build_nginx_map.conf.sh  bundle.js  bundle.min.24a98dd2ae12c412448c9854abf831e97188a1c09c828f13012b7c485bc03153.js  bundle.min.4cc556602e94977893dd89830b4600a75a7a478e4cd961eedb399f4826b24cf5.js  bundle.min.5c28bea6413814b2f1aa4666ca82fc0ae3e694110135ee87e0130e4b1e636e52.js  bundle.min.js  caddy.json  caddy2.json  config.toml  custom.min.63f5a4629e8d246c1a9f32d0dd3c6f02fe8d3eb67f4d656083b60ea66e824210.css  custom.min.css  index.html  index.js  index.min.2d03c30613e747ec3fd28307575670b26e2cbabc982432264dc4df42228b1307.js  index.min.a4887373d40dc140823a4460e85be50841aab7a6dffa96bc137f31b2bdef9dad.js  index.min.js  index.xml  manifest.min.38f0f37a67bf6f9161211f5f1b198c5be4f99765da3fb7a782fc842be4dee04d.json  manifest.min.fbf29d30bd38133f398e3acb01475cb49f4c5e9b90c5670cf1ac8980a1100fd3.json  manifest.min.json  mydb.sqlite  nginx.conf  nginx.sh  nginx_map.conf  package-lock.json  package.json  purgecss.config.js  rollup.config.js  run-chromium.sh  sitemap.xml  start.sh  (+2 more)
categories/: index.html
content/: datenschutzerklaerung.md  ecosia.md  impressum.md  infos.md  kohlrabi.md  mikroplastik-in-kosmetik.md  offline.md  plastik-im-meer.md  rede-greta-thunberg.md  (+1 more)
web-push/: Cargo.toml  file:test.db  setup.sh  subscription_info.json
web-push/migrations/2020-02-15-183504_create_subscribers/: down.sql  up.sql
web-push/src/: lib.rs  main.rs  models.rs  schema.rs
(+146 files in other folders)
