[package]
name = "web-push"
version = "0.1.0"
authors = ["mohe2015 <mohe2015@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/pimeys/rust-web-push
[dependencies]
web-push = "0.6.0"
base64 = "0.11.0"
argparse = "0.2.2"
tokio = { version = "0.2.4", features = ["rt-threaded", "macros"] }
serde_json = "1.0.44"
