[package]
name = "push"
version = "0.1.0"
authors = ["mohe2015 <mohe2015@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/pimeys/rust-web-push
[dependencies]
web-push = { path = "../rust-web-push" }
base64 = "0.11"
argparse = "0.2"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
warp = { version = "0.2", features = ["tls"] }
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.104"
serde_derive = "1.0.104"
log = "0.4"
pretty_env_logger = "0.3"
